<resources>
    <string name="app_name">SaveMemory</string>
    <string name="welcome_to_savememory">Welcome to SaveMemory</string>
    <string name="forgot_your_password">Forgot your</string>
    <string name="enter_your_email_id">Enter your Email Id</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="email">Email</string>
    <string name="nationality">Nationality</string>
    <string name="d_o_b">D.O.B</string>
    <string name="empty_email">Email cannot be empty</string>
    <string name="valid_email">Email not valid</string>
    <string name="gender_not_set">Gender is not selected</string>

    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="choose_your_profile_image">Choose your profile image</string>
    <string name="update">Update</string>
    <string name="type_a_message">Type a message</string>
    <string name="recording_audio">Recording Audio</string>
    <string name="press_and_hold_to_record_audio">Press and hold to record audio</string>
    <string name="my_will">My Will</string>
    <string name="relationship">Relationship</string>
    <string name="relationship_info">Relationship Info</string>
    <string name="info">Info</string>
    <string name="others">Others</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="keep_me_signed_in">Keep me signed in</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="theme">Theme</string>
    <string name="sex">Sex</string>
    <string name="phone_no">Phone No</string>
    <string name="information">Information</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="audios">Audios</string>
    <string name="record">Voice Note</string>
    <string name="edit_beneficiary">Edit Beneficiary</string>
    <string name="my_heritor">My Heritor</string>
    <string name="add_heritor">Add Heritor</string>
    <string name="create_heritor">Create Heritor</string>
    <string name="edit">Edit</string>
    <string name="delete">DELETE</string>
    <string name="font">Font</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="very_large">Very Large</string>
    <string name="modify">Modify</string>
    <string name="add_images">Add Images</string>
    <string name="edit_post">Edit Post</string>
    <string name="memories">MEMORIES</string>
    <string name="relationship_di">Relationship\n(Direct Input)</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? </string>
    <string name="frequently_asked_questions"><u>Frequently Asked Questions</u></string>
    <string name="question_amp_answers"><u>Question &amp; Answers></u></string>
    <string name="how_savememory_works_a_user_you_b_heir_s_the_people_you_want_to_share_your_memories_with_c_savememory_a_will_save_various_records_in_the_application_of_c_and_let_b_know_that_the_records_are_here_in_the_future_if_b_visits_c_and_asks_to_view_the_records_c_will_give_access_to_b">A. User (You)\nB. Inheritor(s) – The people you want share your memories with.\nC. SaveMemory\nThe user will save various records to SaveMemory. The user will let the inheritor(s) know of these records. In the future, if the inheritor(s) contacts a representative of SaveMemory and asks permission to view the records, SaveMemory will grant access to the inheritor(s) after seeing an official document (eg: relationship certificate).</string>
    <string name="please_include_your_name_the_name_on_your_family_relationship_certificate_this_can_be_changed_at_any_time_in_your_settings_page">Please include your name (the name on your family relationship certificate).\n\n This can be changed at any time in your settings page</string>
    <string name="email_address_verification_needed_before_you_can_login_please_check_your_email_to_activate_user_account">Email address verification needed. Before you can login, Please check your email to activate user account.</string>
    <string name="you_save_we_deliver">You Save, We Deliver</string>
    <string name="first_pager_title">Unique &amp; Private Storage</string>
    <string name="second_pager_title">How SaveMemory Works</string>
    <string name="thired_pager_title">Notification Services</string>
    <string name="fourth_pager_title">Security &amp; Permission</string>
    <string name="five_pager_title">Pass Your Will to Your Inheritor(s)</string>
    <string name="notification_services_message">We will notify you of any updates or new features via email or message.</string>
    <string name="security_permission_message">1.Only general information regarding the user and the inheritor can be viewed by SaveMemory officials. Added text, photos, videos, audio files, documents, etc. cannot be seen by SaveMemory officials unless the user grants permission \n 2. The inheritor(s) will not be able to access your account or information unless necessary conditions are met and permission is granted.</string>
    <string name="first_page_text">SaveMemory is a unique, private storage application. Everything you save, from your photos, videos, text or voice files, can be left for your loved ones later on. Every special memory is like a fingerprint, unique, and deserves to be shared with those special people in your life, even if you can’t be there to share them.</string>
    <string name="your_will_message">SaveMemory allows you to leave behind your Will/final wishes which will be kept securely until it can be passed on to your inheritor(s). The relationship between the user and the inheritor(s) is not limited to family members. Your inheritor could a parent, child, lover, friend, spouse, etc.</string>
    <string name="internal_storage" translatable="false">Internal storage</string>
    <string name="profile_com_title">Please provide the following information:</string>
    <string name="verify_email_text">We sent you an activation code.\n Check your email and cilick on the\n link to verify.</string>
    <string name="email_sent_text">An email has been sent to your register email address.\nFollow the direction in the email to reset your password</string>
    <string name="add_will_text">Your will has been\nsuccessfully added.</string>
    <string name="add_inheritor_text">Your inheritor has been\nsuccessfully added.</string>

    <array name="cards_array">
        <item>choose card type</item>
        <item>Credit Card</item>
        <item>Debit Card</item>

    </array>
</resources>
