<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dialogFontSizeSmallTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="13dp"
                android:text="@string/small"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@color/textShade" />

            <TextView
                android:id="@+id/dialogFontSizeMediumTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="13dp"
                android:text="@string/medium"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@color/textShade" />

            <TextView
                android:id="@+id/dialogFontSizeLargeTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="13dp"
                android:text="@string/large"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@color/textShade" />

            <TextView
                android:id="@+id/dialogFontSizeVeryLargeTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="13dp"
                android:text="@string/very_large"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
