<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:scaleType="fitXY"
        android:src="@drawable/comman_page" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/activityLoginLabelTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="Login"
            android:textColor="@color/textPrimary"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_back"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:src="@drawable/msg_icon"
                android:tint="@color/textPrimary" />

            <EditText
                android:id="@+id/activityLoginEmailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.10"
                android:background="@null"
                android:hint="@string/enter_your_email_id"
                android:inputType="textEmailAddress"
                android:text="applligent.fahim@gmail.com"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="#272727"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_back"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:src="@drawable/key_icon"
                android:tint="@color/textPrimary" />

            <EditText
                android:id="@+id/activityLoginPasswordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.10"
                android:background="@null"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:text="12345678"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="#272727"
                android:textSize="15sp" />

        </LinearLayout>


        <CheckBox
            android:id="@+id/activityLoginKeepLoggedCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activityLoginPasswordET"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:buttonTint="#616161"
            android:text="@string/keep_me_signed_in"
            android:textColor="#616161"
            android:textStyle="bold" />

        <Button
            android:id="@+id/activityLoginCV"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_back"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"></Button>

        <LinearLayout
            android:id="@+id/activityLoginForgotPasswordLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activityLoginCV"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_your_password"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" password "
                android:textColor="#0EB9F3"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="?"
                android:textColor="@android:color/black"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/activityLoginSignUpLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activityLoginForgotPasswordLL"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account_register"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" Register "
                android:textColor="#0EB9F3"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>