<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardBackgroundColor="@color/newPrimaryColor"
        app:cardCornerRadius="0dp"
        app:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/activityImagesGridBackIV"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="12dp"
                android:src="@drawable/image_back"
                android:tint="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/activityImagesGridBackIV"
                android:text="@string/images"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:animateLayoutChanges="true"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:id="@+id/activityImagesGridDeleteCV"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginEnd="10dp"
                    android:visibility="gone"
                    app:cardBackgroundColor="@color/redLight"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/delete"
                        android:textColor="@android:color/white"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/activityImagesGridEditCV"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginEnd="10dp"
                    app:cardBackgroundColor="@color/newBlue"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <TextView
                        android:id="@+id/activityImagesGridEditTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/edit"
                        android:textColor="@android:color/white"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/activityImagesGridAddCV"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginEnd="10dp"
                    app:cardBackgroundColor="@color/newBlue"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/add_images"
                        android:textColor="@android:color/white"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/activityImagesGridRV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none" />

</LinearLayout>
