<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="215dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="5dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/choose_your_profile_image"
                android:textColor="@color/kakaoBlue"
                android:textStyle="bold" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher" />

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:weightSum="2">

            <android.support.v7.widget.CardView
                android:id="@+id/dialogChooseGalleryTextView"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/kakaoBlue"
                app:cardCornerRadius="20dp"
                app:cardElevation=".5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/gallery"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/dialogChooseCameraTextView"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/kakaoBlue"
                app:cardCornerRadius="20dp"
                app:cardElevation=".5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/camera"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
