<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="215dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="5dp"
            app:cardBackgroundColor="@color/kakaoPrimaryDark"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <EditText
                android:id="@+id/dialogForgotPasswordET"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/enter_your_email_id"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher" />

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:weightSum="2">

            <android.support.v7.widget.CardView
                android:id="@+id/dialogForgotPasswordCancelCV"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/kakaoPrimary"
                app:cardCornerRadius="20dp"
                app:cardElevation=".5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/kakaoGreen"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/dialogForgotPasswordSubmitCV"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/kakaoYellow"
                app:cardCornerRadius="20dp"
                app:cardElevation=".5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/submit"
                    android:textColor="@color/kakaoBrown"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
